# Monopoly

./: CMakeLists.txt  Makefile  board.cpp  board.h  diceroller.cpp  diceroller.h  display.cpp  display.h  game.cpp  game.h  gamelogic.cpp  gamelogic.h  main.cpp  player.cpp  player.h  playerlogic.cpp  playerlogic.h  propertylogic.cpp  propertylogic.h  rules.cpp  rules.h  setup.cpp  setup.h  utility.cpp  utility.h
